my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_broken_utf8/ESYNTAX_broken_utf8.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_broken_utf8.dml:9:1: error ESYNTAX: syntax error at 'b'\x94'': utf-8 decoding error: invalid start byte
